[package]
name = "memdb"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rustasync/memdb"
documentation = "https://docs.rs/memdb"
description = "Thread-safe in-memory key-value store"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
parking_lot = "0.11.0"
#ccl = "5.1.5"
#futures-preview = { version = "0.3.0-alpha.18", features = ["async-await", "nightly"] }
#futures-timer = "0.3"
dashmap = "1.0.5"
custom_error = "1.7.1"



[dev-dependencies]
runtime = "0.3.0-alpha.7"
futures-preview = { version = "0.3.0-alpha.19", features = ["async-await"] }
